Improve starter example and add support for Maven Archetypes (#77)
* Add Good Jakarta EE Example.

* Cleanup.

* Cleanup

* Cleanup

* Cleanup

* Cleanup

* Add initial data.

* Add Maven starter.

* Start with Payara Micro

* Adding testing.

* Update pom.xml

* Cleanup

* Minor cleanup.

* Add test.

* Test add coffee.

* Test get coffee by ID.

* Add test get all coffees.

* Complete tests.

* Add Docker support

* Update initital-data.sql

* Add index page.

* Fix ID generation.

* Polish index.html.

* Wrap in Archetype.

* Minor cleanup.

* Add Docker support.

* Create README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Add encoding.

* Parameterize package.

* Parameterize packaging.

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Update README.md

* Meet Maven Central requirements.

* Update Dockerfile

* Update README.md