@@ -1,68 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  Copyright (c) 2020 Jeyvison Nascimento and others
+	<groupId>org.eclipse</groupId>
+	<artifactId>jakarta-starter</artifactId>
+	<version>1.0</version>
+	<packaging>maven-archetype</packaging>
 
-  This program and the accompanying materials are made available under the
-  terms of the Eclipse Public License 2.0 which is available at
-  http://www.eclipse.org/legal/epl-2.0.
+	<name>jakarta-starter</name>
+	<description>
+		This is the official Eclipse Foundation starter for Jakarta EE.
+		It generates code to help get started with Jakarta EE projects
+		using Maven. It is possible to do so using Maven
+		archetypes. Support for a UI may be added at a later point. 
+    </description>
 
-  SPDX-License-Identifier: EPL-2.0
+	<url>https://eclipse-ee4j.github.io/starter/</url>
 
-  Contributors:
-    Jeyvison Nascimento - initial API and implementation
+	<organization>
+		<name>Eclipse Foundation</name>
+		<url>https://www.eclipse.org/org/foundation/</url>
+	</organization>
 
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/eclipse-ee4j/starter/issues</url>
+	</issueManagement>
 
-    <groupId>org.eclipse</groupId>
-    <artifactId>starter</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+	<licenses>
+		<license>
+			<name>Eclipse Public License - v 2.0</name>
+			<url>https://www.eclipse.org/legal/epl-2.0/</url>
+		</license>
+	</licenses>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
-    </properties>
+	<developers>
+		<developer>
+			<id>m-reza-rahman</id>
+			<name>Reza Rahman</name>
+			<email>reza_rahman@lycos.com</email>
+		</developer>
+	</developers>
 
-    <dependencies>
-        <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>8.0.0</version>
-            <type>jar</type>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+    <scm>
+        <connection>scm:git:git@github.com:eclipse-ee4j/starter.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:eclipse-ee4j/starter.git</developerConnection>
+        <url>https://eclipse-ee4j.github.io/starter/tree/main</url>
+    </scm>
 
-    <modules>
-        <module>starter-api</module>
-        <module>starter-frontend</module>
-        <module>starter-core</module>
-    </modules>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.report.sourceEncoding>UTF-8</project.report.sourceEncoding>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.tomee.maven</groupId>
-                <artifactId>tomee-maven-plugin</artifactId>
-                <version>8.0.1</version>
-                <configuration>
-                    <tomeeClassifier>plus</tomeeClassifier>
-                    <args>-Xmx512m -XX:PermSize=256m</args>
-                    <webapps>
-                        <webapp>org.eclipse:starter-api:1.0-SNAPSHOT</webapp>
-                        <webapp>org.eclipse:starter-frontend:1.0-SNAPSHOT</webapp>
-                    </webapps>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-
-
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.archetype</groupId>
+				<artifactId>archetype-packaging</artifactId>
+				<version>3.2.1</version>
+			</extension>
+		</extensions>
+	</build>
 </project>
